package com.apayah.music.command.backend;

import com.apayah.music.command.backend.contract.Command;

public class ResumeMusicCommand implements Command {
    
}
