package com.apayah.music.command.backend.contract;


public interface Command {
    
}
